{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "GameplayInput",
            "id": "fb8e3e2f-20c3-47b1-bfe1-88e5fdf3276a",
            "actions": [
                {
                    "name": "DoAction",
                    "type": "Button",
                    "id": "6f6504e2-0ca2-4d16-ac0b-7e75bf4bf1b0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bc2c18d5-becb-402f-b8f6-fdc0d1cd4701",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": ";Keyboard+Mouse",
                    "action": "DoAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard+Mouse",
            "bindingGroup": "Keyboard+Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}